# mushroom_hyperscanning

./: .gitignore  README.md  pyproject.toml  requirements.txt
analaysis/: lateralization.ipynb  load.py
analysis/: qc_figures.ipynb
mushroom_hyperscanning/: data.py  epochs.py  utils.py
mushroom_hyperscanning/preprocessing/: README.md  derivative_pipeline.py  utils.py
mushroom_hyperscanning/preprocessing/deriv-001_conversion/: convert_eeg.py  main.py  merge_ceremony1_eeg_splits.py
mushroom_hyperscanning/preprocessing/deriv-002_alignment/: align_audio_to_eeg.py  align_ecg_to_eeg.py  main.py
mushroom_hyperscanning/preprocessing/deriv-003_sanitization/: clean_triggers.py  main.py  triggers-ceremony1.csv  triggers-ceremony2.csv
mushroom_hyperscanning/preprocessing/deriv-004_autoreject/: main.py  reject.py
mushroom_hyperscanning/scripts/: download_data.py  fetch_dataset.py  preprocess.py
notebooks/: align.ipynb  align_audio.ipynb  analysis.ipynb  clean_data.ipynb  complexity.ipynb  create_conditions_and_analysis.ipynb  ecg_cleaning.ipynb  embeddings.ipynb  epoch_filtering.ipynb  explore.ipynb
src/data/: data_loader.py
src/preprocessing/: README.md  bids_utils.py  derivative_pipeline.py  utils.py
src/preprocessing/deriv-001_alignment/: align_audio_to_eeg.py  ceremony1_merge_eeg_splits.py  main.py  merge_ceremony1_eeg_splits.py
src/preprocessing/deriv-001_conversion/: convert_eeg.py  merge_ceremony1_eeg_splits.py
src/preprocessing/deriv-002_alignment/: align_audio_to_eeg.py  align_ecg_to_eeg.py  main.py
src/scripts/: process_audio.sh
(+2 files in other folders)
