[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]

[project]
dependencies = [
  "numpy>2",
  "pandas",
  "matplotlib",
  "mne",
  "mne-bids",
  "edfio",
  "gdown",
  "pydub",
  "neurokit2",
  "PyWavelets",
  "umap-learn",
  "scikit-learn",
  "deeptime",
  "joblib",
  "tqdm",
  "antropy",
  "neurokit2",
  "jupyter",
]
name = "mushroom_hyperscanning"
version = "0.1.0"

[tool.setuptools]
packages = ["mushroom_hyperscanning"]
